--- a/src/assets/scss/components/custom-item.scss
+++ b/src/assets/scss/components/custom-item.scss
@@ -1,29 +1,79 @@
 .custom-item {
-    position: relative;
-    max-width: 410px;
-    height: 560px;
-    border-radius: 20px;
-    &__content {
-        width: 100%;
-        position: relative;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+
+    // max-width: 410px;
+    height: 100%;
+
+  &__image {
+    width: 100%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
     }
-    &__image {
-        img {
-            width: 100%;
-            height: 100%;
-            border-radius: 20px; 
-            object-fit: cover;
-        }
+    @media screen and (max-width: 575px) {
+      height: 268px;
     }
-    &__text{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        bottom: 20px;
-        left:20px;
+  }
+
+  &__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 40px 32px;
+    width: 100%;
+    color: #FFFF;
+    z-index: 1;
+    // background: linear-gradient(to top, rgba(0, 0, 0, 0.7) 60%, rgba(0, 0, 0, 0) 100%);
+    box-sizing: border-box;
+    @media screen and (max-width: 768px) {
+      padding: 20px 24px;
       
-       
     }
+    @media screen and (max-width: 575px) {
+      padding: 8px 11px;
+      
+    }
+  }
+
+  &__title {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 60px;
+    letter-spacing: -1px;
+    margin-bottom: 15.5px;
+    @media screen and (max-width: 1440px) {
+      font-size: 36px;
+      line-height: 45px;
+      letter-spacing: -0.5px;
+      
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 24px;
+      line-height: 30px;
+      letter-spacing: 0;
+      
+    }
+  }
+
+  &__desc {
+    font-size: 14px;
+    line-height: 1.4;
+    color: #FFFFFF;
+    @media screen and (max-width: 768px) {
+      font-size: 12px;
+      line-height: 15px;
+      letter-spacing: 0.9px;
+      
+    }
+  }
+  // @media screen and (max-width: 460px) {
+  //  width: 164px;
+    
+  // }
 }
