--- a/src/assets/scss/components/list-item.scss
+++ b/src/assets/scss/components/list-item.scss
@@ -2,13 +2,14 @@
   max-width: 1920px;
   margin: 0 auto;
   padding: 0 80px;
+  margin-bottom: 128px;
   @media screen and (max-width: 1440px) {
     padding: 0 40px;
 
   }
   @media screen and (max-width: 768px) {
     padding: 0 20px;
-
+    margin-bottom:48px;
   }
 }
 .our-games {
