--- a/src/assets/scss/components/list-item.scss
+++ b/src/assets/scss/components/list-item.scss
@@ -23,6 +23,7 @@
     margin-top: 24px;
     display: flex;
     justify-content: center;
+    max-width: 860px;
     :deep p {
       width: 860px;
     }
