--- a/src/assets/scss/components/list-item.scss
+++ b/src/assets/scss/components/list-item.scss
@@ -24,6 +24,7 @@
     display: flex;
     justify-content: center;
     max-width: 860px;
+    margin:auto;
     :deep p {
       width: 860px;
     }
