--- a/src/assets/scss/components/about.scss
+++ b/src/assets/scss/components/about.scss
@@ -144,7 +144,7 @@
         }
     }
     &__image{
-
+ 
         &-witch{
             display: flex;
         // flex-direction: column;
@@ -171,7 +171,9 @@
                 height: auto;
             }
         }
-        
+        @media(max-width:768px){
+                   padding: 0 16px;
+        }
         @keyframes jump {
             0% {
                 bottom: 20px;
